--- a/_posts/2016-09-19-csaw-neo.md
+++ b/_posts/2016-09-19-csaw-neo.md
@@ -197,3 +197,9 @@ for i in xrange(len(blocks)-1, 0, -1):
     flag = block_to_text(b) + flag
     print "FLAG = ", flag
 ```
+
+On obtient alors le flag :
+
+```
+FLAG =  flag{what\_if\_i\_told\_you\_you\_solved\_the_challenge}
+```
