Removing escaping caracteres in flag (csaw-ctf : neo)

--- a/_posts/2016-09-19-csaw-neo.md
+++ b/_posts/2016-09-19-csaw-neo.md
@@ -201,5 +201,5 @@ for i in xrange(len(blocks)-1, 0, -1):
 On obtient alors le flag :
 
 ```
-FLAG =  flag{what\_if\_i\_told\_you\_you\_solved\_the_challenge}
+FLAG =  flag{what_if_i_told_you_you_solved_the_challenge}
 ```
