Fix coquille (thanks Grenadine)

--- a/_posts/2016-09-19-csaw-neo.md
+++ b/_posts/2016-09-19-csaw-neo.md
@@ -24,7 +24,7 @@ Pour expliquer le fonctionnement de l'attaque, un petit rappel du fonctionnement
 
 Lorsque nous souhaitons utiliser un chiffrement par bloc tel que [AES](https://fr.wikipedia.org/wiki/Advanced_Encryption_Standard) sur des messages de longueur supérieur à la taille d'un bloc, nous devons utiliser un mode de chiffrement tel que [CBC](https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_Block_Chaining_.28CBC.29) (il en existe d'autres, tel que CTR, CFB, GCM...).
 
-Pour démarrer l'algorithme, le mode [CBC](https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_Block_Chaining_.28CBC.29) à besoin d'un *IV* (vecteur d'initialisation). Appellons \\(D\_k\\) la fonction de chiffrement de bloc (ici, l'AES), et \\(E\_k\\) la fonction de déchiffrement.
+Pour démarrer l'algorithme, le mode [CBC](https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_Block_Chaining_.28CBC.29) à besoin d'un *IV* (vecteur d'initialisation). Appellons \\(E\_k\\) la fonction de chiffrement de bloc (ici, l'AES), et \\(D\_k\\) la fonction de déchiffrement.
 
 Lorsque l'on souhaite chiffrer un message, on doit le découper en \\(n\\) blocs de taille fixe (16 bytes pour AES). Appellons, \\(C\_i\\) le chiffré du bloc \\(i\\) du message, et \\(P\_i\\) le bloc \\(i\\) du message en clair.
 
