Write-up SHA2017 : megan35

--- a/_posts/2017-08-07-sha2017-megan35.md
+++ b/_posts/2017-08-07-sha2017-megan35.md
@@ -38,9 +38,11 @@ The program decodes a megan35 string, and print it to stdout. The problem is tha
 
 To build my exploit, I used the script [weird_encodings.py](https://gist.github.com/tunelko/49b7e64c1688d62d0ecd) from a github repository to encode strings in megan-35.
 
-I started to get the base adresse of libc function from the leak of the format string (by using "%s").
+I started to get the base address of libc function from the leak of the format string (by using "%s").
 
-With this adresse and the libc provided, I'm now able to build a return2libc attack and can finally overwrite the saved-eip with the system() adresse and execute a shell command !
+With this address and the libc provided, I'm now able to build a return2libc attack and overwrite the saved-eip with the system() address !
+
+And all is done !
 
 
 # My exploit
