--- a/_posts/2017-08-07-sha2017-megan35.md
+++ b/_posts/2017-08-07-sha2017-megan35.md
@@ -16,9 +16,9 @@ A service is running on megan35.stillhackinganyway.nl:3535.
 
 Files provided (ELF-32 bits):
 
-- [megan-35](https://repo.t0x0sh.org/ctf/2017-sha/megan-35)
+- [megan-35](https://repo.t0x0sh.org/ctf/2017/sha/megan-35)
 
-- [libc.so.6](https://repo.t0x0sh.org/ctf/2017-sha/libc.so.6)
+- [libc.so.6](https://repo.t0x0sh.org/ctf/2017/sha/libc.so.6)
 
 Protections :
 
