[FIX] Set code to 80 columns

--- a/_posts/2017-08-07-sha2017-megan35.md
+++ b/_posts/2017-08-07-sha2017-megan35.md
@@ -55,7 +55,8 @@ import struct
 class Megan35:
 
     def __init__(self):
-        megan35 = "3GHIJKLMNOPQRSTUb=cdefghijklmnopWXYZ/12+406789VaqrstuvwxyzABCDEF5"
+        megan35 = "3GHIJKLMNOPQRSTUb=cdefghijklmn" \
+                  "opWXYZ/12+406789VaqrstuvwxyzABCDEF5"
         b = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/="
         self.srch = dict(zip(b, megan35))
         self.revlsrch = dict(zip(megan35, b))
